
  Changes:
    - Free for all multiplier is now configurable in startup tab.  It affects damage and HP.
    - Changed regular stone-wall from 50 resistances to 33 resistances.  Reinforced wall remain unchanged.
    - Removed "Disable Aerial Collision" setting for units as 2.0 will have aerial units and it's incompatible with new path finder.
    - Fixed some UI incorrect descriptions.

  Bugfixes:
    - Fixed calculateMultipleLevel function did not call level up event.
    - Fixed a crash when player attack boss under certain condition. [Issue: 45]

  Optimization:
    - Various Code Refactors
    - Cron processor changes

---------------------------------------------------------------------------------------------------
Version: 1.20.13
Date: 2024-03-01

  Changes:
    - Added a new "Map" setting to change army supply limit. [1x - 5x]
    - Default control army UI key changed from "Ctrl+A" to "Ctrl+Alt+A"

  Bugfixes:
    - Fixed army population does not decrease when they removed by AAI Vehicle's deadzone logic. [Issue #43]

---------------------------------------------------------------------------------------------------
Version: 1.20.12
Date: 2023-12-22

  Bugfixes:
    - Fixed a crash when dropships can't find a land position to drop. It will spawn a low tier flying unit instead.

---------------------------------------------------------------------------------------------------
Version: 1.20.11
Date: 2023-12-10

  Changes:
    - ERM Roach world map presets changes:
    - [Preset] Rename "ERM Roach World" to "ERM RTS World"
    - [Preset] Resources spawn in very-high frequency with very-low richness setting.
    - [Preset] Starting area is a little larger than normal.
    - [Preset] This intended to simulate RTS map, which resource patch have low richness.
    - Changed minimum group gathering time from 2 minutes to 3.5 minutes. (half Nauvis day)
    - Changed Elite Squad spawn attack points' default from 60000 to 45000.