@@ -16,6 +16,7 @@ function ScenarioHelper.build_base(surface, blueprint_string, x_offset, y_offset
     for _, entity in pairs(util.table.deepcopy(bp_entities)) do
         entity.position = { entity.position.x + x_offset, entity.position.y + y_offset }
         entity.force = 'player'
+        entity.raise_built = true
         surface.create_entity(entity)
     end
 end
